# pytest_practice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
src/: main.py  state.py
test/: test_main.py
