[project]
name = "pytest-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tutti-hobbyist", email = "tutti.hobbyist@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.0",
    "flake8>=7.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_practice"]

[tool.pytest]
testpaths = ["test"] # テストが含まれるディレクトリ
python_files = ["test_*.py", "*_test.py"] # テストファイルのパターン
